--- a/public/styles.css
+++ b/public/styles.css
@@ -3,15 +3,26 @@
     padding: 0;
 }
 
-.background {
+html {
     height: 100%;
     width: 100%;
-    background-color:#f0ab61;
+
+}
+
+.background {
+    
+    height: 100%;
+    width: 100%;
+
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    /* position: absolute; */
-    align-items: center;
+
+    /* opacity: 0.8; */
+    background:
+    radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent),
+    radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent) 0 -50px;
+    background-color: slategray;
+    background-size:75px 100px;
 }
 
 .chat{
@@ -29,20 +40,50 @@
 
 .input_bar{
     top: 100px;
-    position: absolute;
-    width: 280px;
+    max-width: 280px;
+    min-width: 180px;
+    /* position: absolute; */
+    width: 18%;
     transition: .5s;
     text-align: center;
 }
 
 .center_button{
+    /* min-height: 48px;
+    max-height: 60px; */
+    max-width: 280px;
+    min-width: 180px;
     top: 100px;
-    /* position: absolute; */
-    width: 280px;
+    width: 15%;
     transition: .5s;
     text-align: center;
     justify-content: space-around;
     border-radius:10px;
     padding:10px;
-    margin:1%
+    margin:1%;
+    /* line-height: 2.375rem;
+    box-sizing: border-box; */
+
+}
+
+
+
+.box{
+    top: 10%;
+    max-width: 320px;
+    max-height: 320px;
+    min-width: 200px;
+    min-height: 200px;
+
+    height: 30%;
+    width: 35%;
+    margin: 15%;
+    background-color:#ffffff;
+    padding: 16px;
+    border-radius: 4px;
+    box-shadow: rgb(0 0 0 / 15%) 0px 2px 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
 }
