--- a/public/styles.css
+++ b/public/styles.css
@@ -3,10 +3,14 @@
     padding: 0;
 }
 
-html {
+html,body{
     height: 100%;
     width: 100%;
 
+}
+
+.root{
+    height: 100vh;
 }
 
 .background {
@@ -40,8 +44,8 @@ html {
 
 .input_bar{
     top: 100px;
-    max-width: 280px;
-    min-width: 180px;
+    max-width: 320px;
+    min-width: 220px;
     /* position: absolute; */
     width: 18%;
     transition: .5s;
@@ -51,8 +55,8 @@ html {
 .center_button{
     /* min-height: 48px;
     max-height: 60px; */
-    max-width: 280px;
-    min-width: 180px;
+    max-width: 320px;
+    min-width: 220px;
     top: 100px;
     width: 15%;
     transition: .5s;
@@ -69,18 +73,23 @@ html {
 
 
 .box{
-    top: 10%;
-    max-width: 320px;
-    max-height: 320px;
-    min-width: 200px;
-    min-height: 200px;
+    width: 400px;
+    height: 400px;
 
-    height: 30%;
-    width: 35%;
-    margin: 15%;
+    /* height: 25%;
+    width: 700px; */
+    /* margin: 15%; */
+
+    max-width: 500px;
+    max-height: 500px;
+    min-width: 400px;
+    min-height: 400px;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
     background-color:#ffffff;
     padding: 16px;
-    border-radius: 4px;
+    border-radius: 15px;
     box-shadow: rgb(0 0 0 / 15%) 0px 2px 4px;
     display: flex;
     flex-direction: column;
